# particle-manager-module

./: .gitignore  README.md  download_win_prebuilt.py  itz_particle_manager.pyi  meson.build  particle_manager.pyi  pyparticle.py  pyproject.toml  requirements.txt  setup.py  test.py  visual_test.py
.github/workflows/: cppcheck.yml  macos.yml  ubuntu.yml  windows.yml
src/: .clang-format  data_block.c  effect_data_block.c  effect_instance.c  emitter.c  f_vec.c  float_array.c  module.c  option.c  particle_effect.c  particle_group.c  particle_manager.c  simd_particles_avx2.c  simd_particles_sse2.c  updaters_simd_avx2.c  updaters_simd_sse2.c
src/include/: MT19937.h  base.h  data_block.h  effect_data_block.h  effect_instance.h  emitter.h  f_vec.h  float_array.h  option.h  particle.h  particle_effect.h  particle_group.h  particle_manager.h  pygame.h  simd_common.h
src_py/: pyparticle.py  test.py  visual_test.py
test/: test_particle_manager.py
